Fixed the UI alignment issues.

--- a/src/app/util/content-status-history-modal-popup/content-status-history-modal-popup.component.css
+++ b/src/app/util/content-status-history-modal-popup/content-status-history-modal-popup.component.css
@@ -437,3 +437,8 @@ all the elements inside the author comments. */
 .disabled {
     cursor: not-allowed !important;
 }
+.view_emailcard {
+    background-color: #f6f9fc;
+    border-radius: 7px;
+    border:1px solid #ddd;
+}
